end.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: service #<------ Should match the name of Service
subsets:
  - addresses:
      - ip: 10.1.0.42
    ports:
      - port: 8000
