service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jap-deployment
spec:
  type: NodePort
  selector:
    app: djjap
  ports:
  - protocol: TCP
    port: 8001
    targetPort: 8000
    nodePort: 31420
