sv.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: ingress-nginx
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
    - port: 8082
      targetPort: 80
